# mini-c-compiler

./: .clang-format  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Grammar.txt  README.md
.ccls-cache/@@root@vsc-repo@homework@compiling/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@8@algorithm.blob  @usr@include@c++@8@array.blob  @usr@include@c++@8@atomic.blob  @usr@include@c++@8@backward@auto_ptr.h.blob  @usr@include@c++@8@backward@binders.h.blob  @usr@include@c++@8@bits@algorithmfwd.h.blob  @usr@include@c++@8@bits@alloc_traits.h.blob  @usr@include@c++@8@bits@allocated_ptr.h.blob  @usr@include@c++@8@bits@allocator.h.blob  @usr@include@c++@8@bits@atomic_base.h.blob  @usr@include@c++@8@bits@atomic_futex.h.blob  @usr@include@c++@8@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@8@bits@basic_ios.h.blob  @usr@include@c++@8@bits@basic_ios.tcc.blob  @usr@include@c++@8@bits@basic_string.h.blob  @usr@include@c++@8@bits@basic_string.tcc.blob  @usr@include@c++@8@bits@char_traits.h.blob  @usr@include@c++@8@bits@codecvt.h.blob  @usr@include@c++@8@bits@concept_check.h.blob  @usr@include@c++@8@bits@cpp_type_traits.h.blob  @usr@include@c++@8@bits@cxxabi_forced.h.blob  @usr@include@c++@8@bits@cxxabi_init_exception.h.blob  (+228 more)
ref/: analysis.cpp  cgz编译原理ppt(final).pptx
src/: Makefile  compiler.cc  grammatical_analysis.hpp  lexical_analysis.hpp  object_gen.hpp  semantic_analysis.hpp  util.hpp
test/: source_code.txt  test_grammar.txt
(+9 files in other folders)
